Add ISO extraction feature with optimized performance
Added automatic ISO extraction after decryption with the following improvements:

- New ExtractISOsAfterDecryption setting in ProgramSettings
- Extraction runs in BackgroundWorker for non-blocking UI updates
- Status updates every 10 files to reduce UI overhead
- 80KB buffer size for faster file copying
- Individual file/directory error handling with warnings
- Strips ISO9660 version suffixes (;1, ;2) from extracted filenames
- Shows total file count and success/failure statistics

The extraction feature uses DiscUtils.Iso9660 library for ISO reading
and provides real-time progress feedback in the status bar.

--- a/Source/PS3 Quick Disc Decryptor/App.config
+++ b/Source/PS3 Quick Disc Decryptor/App.config
@@ -27,6 +27,9 @@
             <setting name="DeleteKeysAfterUse" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="ExtractISOsAfterDecryption" serializeAs="String">
+                <value>False</value>
+            </setting>
             <setting name="CompactMode" serializeAs="String">
                 <value>False</value>
             </setting>
