--- a/Source/PS3 Quick Disc Decryptor/My Project/Settings.settings
+++ b/Source/PS3 Quick Disc Decryptor/My Project/Settings.settings
@@ -20,6 +20,9 @@
     <Setting Name="DeleteKeysAfterUse" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="ExtractISOsAfterDecryption" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
     <Setting Name="CompactMode" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
